Revert "引入本地媒体扫描引擎与音乐融合，全面强化附件格式安全校验 (#862)"
This reverts commit d785e03c